third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/invalid-input-impl-anyway.stderr
error: expected attribute arguments in parentheses: #[error(...)]
 --> tests/ui/invalid-input-impl-anyway.rs:4:3
  |
4 | #[error]
  |   ^^^^^
