third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/invalid-input-impl-anyway.rs
use thiserror::Error;

#[derive(Error, Debug)]
#[error]
pub struct MyError;

fn main() {
    // No error on the following line. Thiserror emits an Error impl despite the
    // bad attribute.
    _ = &MyError as &dyn std::error::Error;
}
